neater gradle files