@@ -1,6 +1,6 @@
 buildscript{
     ext{
-        props = new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }
+        props = new Properties().with{ p -> p.load(file("gradle.properties").newReader()); return p }
 
         mindustryVersion = props["mindustryVersion"]
         mindustryHash = props["mindustryHash"]
@@ -9,20 +9,22 @@ buildscript{
 
     repositories{
         mavenCentral()
-        maven{ url 'https://jitpack.io' }
+        maven{ url "https://jitpack.io" }
     }
 
     dependencies{
         classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
         classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        //classpath "com.github.Anuken:Mindustry:$mindustryHash"
         classpath "com.github.younggam:multi-lib:$multilibVersion"
     }
 }
 
 allprojects{
-    apply plugin: 'java'
+    apply plugin: "java"
+    apply plugin: "java-library"
+
     group = "com.github.avant"
+    version = "0.3"
 
     ext{
         mindustryVersion = props["mindustryVersion"]
@@ -30,48 +32,28 @@ allprojects{
         multilibVersion = props["multilibVersion"]
         modName = props["modName"]
 
-        sdkVersion = '30'
+        sdkVersion = "30"
         sdkRoot = System.getenv("ANDROID_HOME")
-
-        version '1.0'
-
-        sourceCompatibility = 1.8
     }
 
     repositories{
-        mavenLocal()
         mavenCentral()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url "https://oss.sonatype.org/content/repositories/releases/" }
-        maven{ url 'https://jitpack.io' }
+        maven{ url "https://jitpack.io" }
         jcenter()
     }
 
-    //java 8 backwards compatibility flag
     tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 14
+
         if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-            options.compilerArgs.addAll(['--release', '8'])
+            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
         }
-    }
-}
 
-project(":main"){
-    dependencies{
-        compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-        compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        //compileOnly "com.github.Anuken:Mindustry:$mindustryHash"
-
-        implementation "com.github.younggam:multi-lib:$multilibVersion"
-    }
-}
-
-project(":tools"){
-    dependencies{
-        implementation project(":main")
-
-        implementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-        implementation "com.github.Anuken.Arc:packer:$mindustryVersion"
-        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        //implementation "com.github.Anuken:Mindustry:$mindustryHash"
+        doFirst{
+            options.compilerArgs = options.compilerArgs.findAll{ it != '--enable-preview' }
+        }
     }
 }
